Updating CMakeLists for someting more "modern"
 - Avoid the use of CMAKE_CXX_FLAGS
 - Avoid the use of GLOB
 - Change name project
 - Set range of Cmake versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,37 @@
-cmake_minimum_required(VERSION 3.11.3)
+cmake_minimum_required(VERSION 3.1...3.15)
 
-# set(CMAKE_CXX_STANDARD 17)
-project(OSM_A_star_search)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -pthread")
+project(Traffic_simulation)
 
-find_package(OpenCV 4.1 REQUIRED)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+find_package(Threads REQUIRED)
+find_package(OpenCV 4.1 REQUIRED
+  COMPONENTS
+    core
+    imgproc
+    highgui)
 
-include_directories(${OpenCV_INCLUDE_DIRS})
-link_directories(${OpenCV_LIBRARY_DIRS})
-add_definitions(${OpenCV_DEFINITIONS})
+# Glob it's not recommended
+# :r !ls src/*.cpp
+set(SOURCES
+  src/Graphics.cpp
+  src/Intersection.cpp
+  src/Street.cpp
+  src/TrafficLight.cpp
+  src/TrafficObject.cpp
+  src/TrafficSimulator-Final.cpp
+  src/Vehicle.cpp)
 
-# Find all executables
-file(GLOB project_SRCS src/*.cpp) #src/*.h
+# it should work without this
+set(SOURCES_ABS)
+foreach(source ${SOURCES})
+  list(APPEND SOURCES_ABS ${PROJECT_SOURCE_DIR}/${source})
+endforeach()
 
 # Add project executable
-add_executable(traffic_simulation ${project_SRCS})
-target_link_libraries(traffic_simulation ${OpenCV_LIBRARIES})
+add_executable(traffic_simulation ${SOURCES_ABS})
+
+target_link_libraries(traffic_simulation
+                      PUBLIC Threads::Threads
+                      PRIVATE ${OpenCV_LIBS})
